--- a/BMI.css
+++ b/BMI.css
@@ -1,28 +1,38 @@
-/* styles.css */
+/* BMI.css */
+
+h1{
+  color:rgb(156, 155, 155);
+  font-family:'Times New Roman', Times, serif;
+}
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: rgb(63, 63, 66);
     margin: 0;
-    padding: 0;
-    display: flex;
+    padding: 20px;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     height: 100vh;
+    
   }
   
   .container {
-    background: white;
+    margin-top: 40px;
+    background: rgb(44, 40, 52);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     max-width: 400px;
     width: 100%;
+    position:relative;
+  }
+  label{
+    color:#7a7a7a;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
   }
   
-  h1 {
-    color: #333;
-  }
+  
   
   form label {
     display: block;
@@ -49,7 +59,7 @@ body {
   }
   
   button:hover {
-    background-color: #218838;
+    background-color: #23422a;
   }
   
   #result {
@@ -57,6 +67,114 @@ body {
   }
   
   #result p {
-    font-size: 1.2em;
+    font-size: 15px;
     margin: 5px 0;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: bisque;
   }
+  #result p:hover {
+    color: azure;
+  }
+.navbar{
+  background-color: aliceblue;
+  margin:20px;
+  padding:0px;
+  /* position:fixed; */
+}
+.def {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+.active, .def:hover {
+  background-color: #ccc;
+}
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+#explanation p{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color:#444;
+  background-color: rgb(250, 249, 247);
+  padding: 20px;
+  margin: 0px;
+}
+
+
+* {box-sizing:border-box}
+.slideshow-container {
+  max-width: 400px;
+  position: relative;
+  margin: auto;
+}
+.mySlides {
+  display: none;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
